fix: align horizontal padding between main page elements

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -15,10 +15,6 @@
 }
 
 @media screen and (min-width: 700px) {
-  .wrap {
-    padding: 1rem 1rem 0 1rem;
-  }
-
   .hasAside.wrap {
     display: flex;
   }
